# HandLayer

./: CMakeLists.txt  README.md  bfloat16.h  blas_wrapper.h  embedding.h  linear.h  logsoftmax.h  lstm.h  main.cc  tensor.cc  tensor.h
apps/: logistic_regression.cc  part_of_speech_tagger.cc
apps/pos_data/: bias_hh_l0.npy  bias_ih_l0.npy  c_t.npy  embedding.npy  h_t.npy  linear_bias.npy  linear_weight.npy  pytorch_baseline.py  tag_file.txt  test_sentences.txt  weight_hh_l0.npy  weight_ih_l0.npy  word_file.txt
src/: tensor.cc  tensor.h
src/layers/: embedding.cc  embedding.h  linear.cc  linear.h  logsoftmax.cc  logsoftmax.h  lstm.cc  lstm.h
src/types/: bfloat16.h  float32.h
src/utils/: utils.h
test/: CMakeLists.txt  all_tests.cc  all_tests.cpp  test_embedding.cc  test_linear.cc  test_lstm.cc  test_softmax.cc
test/data/: bias_hh_l0.npy  bias_ih_l0.npy  embedding.npy  linear_bias.npy  linear_weight.npy  weight_hh_l0.npy  weight_ih_l0.npy
